testsuite/negative/Issue-1227.n
class B1 {}
class D1 : B1 {}

class B2
{
  public virtual Foo[T]() : T where T: D1
  {
    default(T)
  }
}
class D2 : B2
{
  public override Foo[T]() : T where T: D1 //E: Constraints for override and explicit interface implementation methods are inherited from the base method, so they cannot be specified directly
  {
    D1() :> T
  }
}
